# corteva-weather-api

./: .gitignore  CTVA Data Coding Exercise.txt  Makefile  README.md  data_analysis.py  data_ingestion.py  db_utils.py  logging_utils.py  pyproject.toml  requirements.txt  weather_schema.sql
api/: app.py
data/: wx_data
tests/: test_api.py  test_data_analysis.py  test_data_ingestion.py
